Add bubblesort, Fix sort order

--- a/app/src/main/res/layout/activity_controller.xml
+++ b/app/src/main/res/layout/activity_controller.xml
@@ -151,6 +151,15 @@
             android:textSize="20dp"
             android:textStyle="bold"
             android:onClick="onClickStart" />
+
+        <Button
+            style="?android:attr/buttonStyleSmall"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="stop"
+            android:id="@+id/button"
+            android:layout_gravity="center_horizontal"
+            android:onClick="onClickStop" />
     </LinearLayout>
 
 </LinearLayout>
