--- a/app/src/main/res/layout/activity_controller.xml
+++ b/app/src/main/res/layout/activity_controller.xml
@@ -144,7 +144,7 @@
         <Button
             android:layout_width="100dp"
             android:layout_height="60dp"
-            android:text="Start"
+            android:text="START"
             android:id="@+id/start_button"
             android:layout_gravity="center_horizontal"
             android:layout_marginTop="15dp"
@@ -156,7 +156,7 @@
             style="?android:attr/buttonStyleSmall"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="stop"
+            android:text="STOP"
             android:id="@+id/button"
             android:layout_gravity="center_horizontal"
             android:onClick="onClickStop" />
